css/index.css
*{
    margin: 0;
    padding: 0;
    font-family: 'Roboto Mono', monospace;
    color: #fff;
}
.contato{
    display: flex;
    width: 100%;
    justify-content: end;
    margin-right: 4%;
    position: absolute;
    top: 20px;
}
.contato a{
    width: auto;
    height: 30px;
}
.contato-container{
    position: relative;
    display: inline-block;
}
.dropbtn{
    background-color: #003f72;
    border: none;
    width: 100px;
    height: 40px;
    color: #fff;
    font-size: 15px;
}
.dropdown-content {
    display: none;
    position: absolute;
    background-color: #003f72;
    width: 100px;
    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
    z-index: 1;
}
.dropdown-content a {
    color: #fff;
    padding: 5px;
    margin: auto;
    text-decoration: none;
    display: block;
}
.dropdown-content a:hover {
    background-color: #007bc2;
    width: 100%;
}

.contato-container:hover .dropdown-content {
    display: flex;
    flex-wrap: wrap;
}

.contato-container:hover .dropbtn {
    background-color: #002f55;
}

main{
    display: flex;
    justify-content: center;
    align-items: center;
    flex-wrap: wrap;
    height: 100vh;
    background: linear-gradient(#0084d1, #c9ecff);
    overflow: hidden;
}
h1, p, a, h2{
    width: 100%;
    text-align: center;
}
h1{
    font-size: 80px;
}
.start-container img, a{
    height: 70px;
    width: 220px;
}
.title-container{
    width: 100%;
    display: flex;
    flex-wrap: wrap;
    margin-top: 5%;
}
.start-container:hover img, a{
    height: 80px;
    width: 240px;
}

.pipe{
    position: absolute;
    bottom: 0;
    width: 80px;
    height: 80px;
    animation: pipeAnimation 3s infinite linear;
}
.clouds{
    position: absolute;
    width: 750px;
    height: 300px;
    margin-top: 10px;
    animation: cloudsAnimation 4s infinite linear;
    z-index: 0;
}
@keyframes pipeAnimation{
    from{
        right: -80px;
    }
    to{
        right: 100%;
    }
}
@keyframes cloudsAnimation{
    from{
        right: -600px;
    }
    to{
        right: 100%;
    }
}
@media screen and (max-width: 500px){
    h1{
        font-size: 60px;
    }
    main{
        padding: 2%;
    }
}

